--- a/app/src/main/res/layout/activity_a22_change_password.xml
+++ b/app/src/main/res/layout/activity_a22_change_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="32dp"
     android:paddingRight="32dp"
-    tools:context=".a0_splash_screen.a2_profil.A22_ChangePasswordActivity">
+    tools:context=".a2_profil.A22_ChangePasswordActivity">
 
     <!-- Copier le contenu d'activity_login_signup puis supprimer les parties suivantes
         - Le nom
