--- a/app/src/main/res/layout/fragment_f21_request.xml
+++ b/app/src/main/res/layout/fragment_f21_request.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="F21_RequestFragment">
+    tools:context=".f2_requests.F21_RequestFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvRequests"
